# gas_app_v2

./: .env.example  .gitignore  .pre-commit-config.yaml  ACTIVITY_KIND_APPROVAL.md  ACTIVITY_KIND_NAMING.md  ACTIVITY_LOGIC_AUDIT.md  ACTIVITY_SPEC.md  AUDIT_TODO.md  BUTTON_CONTRACT.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEX_TICKET_FIXES.md  CODEX_TICKET_V2.md  DATABASE_ARCHITECTURE_ANALYSIS.md  EPIC_1_TICKETS.md  EPIC_2_TICKETS.md  EPIC_3_TICKETS.md  EPIC_4_TICKETS.md  EPIC_5_TICKETS.md  EPIC_6_TICKETS.md  PHASE_3_PROGRESS.md  REFACTORING_COMPLETE.md  REFACTORING_TICKETS.md  TESTING_PLAN.md  TICKET_ACTIVITY_VISIBILITY.md  TICKET_ADJUSTMENT_CARD_CLEANUP.md  TICKET_A_LIVE_ORDER_FIELDS.md  TICKET_BALANCE_WORDING_FIX.md  TICKET_B_DEDUP_AND_DIRECTION.md  TICKET_CACHE_INVALIDATION_FIXES.md  TICKET_CARD_DISPLAY_FIXES.md  TICKET_COMPANY_BUY_IRON_FIXES.md  TICKET_CURRENCY_SETTINGS.md  TICKET_C_SCREEN_REFACTOR.md  TICKET_DIST_ONBOARDING.md  TICKET_FIX_BALANCE_PILL_ZERO_WORDING.md  TICKET_FIX_COMPANY_PAYMENT_HEADER.md  TICKET_FIX_CURRENT_BALANCE_DISPLAY_ZERO.md  TICKET_FIX_CURRENT_BALANCE_DISPLAY_ZERO_APPLY.md  TICKET_FIX_DELTABOX_FLOAT_BADGE.md  (+36 more)
backend/: .env.test  README.md  alembic.ini  dockerfile  pyproject.toml  test_results.txt  tests_results.txt  tmp_list_sys.py
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  auth.py  config.py  constants.py  db.py  events.py  logging_config.py  main.py  models.py  schemas.py  schemas_old.py
backend/scripts/: clear_business_data.py  create_distributor_account.py  delete_distributor.py  reset_database.py  seed_realistic_data.py
backend/tests/: conftest.py  test_collection_snapshots.py  test_company_payable.py  test_customer_adjustment_inventory.py  (+11 more)
(+571 files in other folders)
