[tool.poetry]
name = "gas-backend"
version = "0.1.0"
description = "FastAPI backend for gas delivery management"
authors = ["Mohanand Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { version = "^0.24.0", extras = ["standard"] }
sqlmodel = "^0.0.21"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.4"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
